Bug 566825 Multiple signatures when switching between accounts (signature of previously selected account is not removed). Adapt to localName returning lower case. r=Standard8,sr=bienvenu